# IodineGBA

./: .gitignore  Cargo.toml  build  deploy-ovh.sh  run-local
.cargo/: config.toml
emulator/: index.html
emulator/IodineGBA/core/: Emulator.js
emulator/user_scripts/: ArrayDeque.js  GUIGlueCode.js  ROMLoadGlueCode.js  SaveStateGlueCode.js  Utilities.js
network/: Cargo.toml
network-wasm/: Cargo.toml
network-wasm/src/: lib.rs
network/src/: lib.rs
server/: Cargo.toml  deploy-ovh.sh
server/scripts/: down.sh  log.sh  run.sh  systemd.sh  up.sh
server/src/: main.rs
state-wasm/: Cargo.toml
state-wasm/src/: lib.rs
state-wasm/src/encoder/: mod.rs
