[package]
name = "network"
version = "0.1.0"
edition = "2021"
 
[dependencies.b64] # https://github.com/jethrogb/b64
# MIT / APACHE-2.0
# Used to compress serialized data into Strings for JS/HTML to use
version = "0.4.0"
 
[dependencies.bincode] # https://github.com/bincode-org/bincode
# MIT
# Used to compress serialized data
version = "1.3.3"

[dependencies.serde] # https://github.com/serde-rs/serde
# MIT / APACHE-2.0
# Used for deriving de/serialization
version =  "1.0"
features = ["derive"]

[dependencies.backtrace] # https://github.com/rust-lang/backtrace-rs
# MIT / APACHE-2.0
# Use for getting a stack trace easily
version = "0.3.61" 