[package]
name = "state-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.1" }
wasm-bindgen-console-logger = "0.1.1"
log = "0.4.8"


[dependencies.b64] # https://github.com/jethrogb/b64
# MIT / APACHE-2.0
# Used to compress serialized data into Strings for JS/HTML to use
version = "0.4.0"

[dependencies.backtrace] # https://github.com/rust-lang/backtrace-rs
# MIT / APACHE-2.0
# Use for getting a stack trace easily
version = "0.3.61" 
 
[dependencies.bincode] # https://github.com/bincode-org/bincode
# MIT
# Used to compress serialized data
version = "1.3.3"

[dependencies.wasm-bindgen] # https://github.com/rustwasm/wasm-bindgen
# MIT / APACHE-2.0
# Used to generate WASM bindings for the `network` crate
version = "0.2.80"
features = ["serde-serialize"]

[dependencies.js-sys] # https://github.com/rustwasm/wasm-bindgen
# MIT / APACHE-2.0
# Used to generate WASM bindings for the `network` crate
version = "0.3.57" 

[dependencies.serde] # https://github.com/serde-rs/serde
# MIT / APACHE-2.0
# Used for deriving de/serialization
version =  "1.0"
features = ["derive"]